[project]
name = "fastrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.17.0",
    "fastapi[standard]>=0.116.1",
    "flagembedding",
    "llama-index>=0.13.3",
    "llama-index-llms-anthropic>=0.9.0",
    "llama-index-postprocessor-cohere-rerank>=0.5.0",
    "llama-index-postprocessor-flag-embedding-reranker>=0.4.0",
    "llama-index-readers-wikipedia>=0.4.0",
    "llama-index-vector-stores-pinecone>=0.7.1",
    "pinecone[grpc]>=7.3.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
]

[tool.uv.sources]
flagembedding = { git = "https://github.com/FlagOpen/FlagEmbedding.git" }
